[gd_scene load_steps=8 format=2]

[ext_resource path="res://Entities/Tower/Tower.png" type="Texture" id=1]
[ext_resource path="res://Entities/Tower/Tower.gd" type="Script" id=2]
[ext_resource path="res://Entities/Tower/Tower.tres" type="Material" id=3]
[ext_resource path="res://Entities/Tower/build.wav" type="AudioStream" id=4]
[ext_resource path="res://Entities/Tower/shoot.wav" type="AudioStream" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 31, 31 )

[sub_resource type="CircleShape2D" id=2]
radius = 100.0

[node name="Tower" type="Node2D"]
z_index = 1
script = ExtResource( 2 )

[node name="Texture" type="Sprite" parent="."]
material = ExtResource( 3 )
scale = Vector2( 0.12, 0.12 )
texture = ExtResource( 1 )

[node name="Collider" type="Area2D" parent="."]
gravity_vec = Vector2( 0, 0 )
collision_layer = 2
collision_mask = 2

[node name="Shape" type="CollisionShape2D" parent="Collider"]
visible = false
shape = SubResource( 1 )

[node name="Range" type="Area2D" parent="."]

[node name="Shape" type="CollisionShape2D" parent="Range"]
visible = false
shape = SubResource( 2 )

[node name="SfxBuild" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )

[node name="SfxShoot" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
[connection signal="area_entered" from="Range" to="." method="_on_Range_area_entered"]
[connection signal="area_exited" from="Range" to="." method="_on_Range_area_exited"]
